--- a/projects/helloWorld/jenkinsfile
+++ b/projects/helloWorld/jenkinsfile
@@ -27,6 +27,7 @@ pipeline {
             steps {
                 sh 'sudo python3 projects/helloWorld/app.py &'
                 sleep 100
+                mail bcc: '', body: '<b>PIPELINE STATUS</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}', cc: '', from: '', replyTo: '', subject: 'Jenkins Pipeline report', to: 'getfitwithsagar2366@gmail.com'
             }
         }
     }
