--- a/projects/helloWorld/jenkinsfile
+++ b/projects/helloWorld/jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
             steps {
                 sh 'sudo python3 projects/helloWorld/app.py &'
                 // sleep 100
-             mail bcc: '', body: "<b>PIPELINE STATUS</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}", cc: '', charset: 'UTF-8', from: '', mimeType: 'text/html', replyTo: '', subject: "PIPELINE STATUS CI: Project name -> ${env.JOB_NAME}", to: "getfitwithsagar2366@gmail.com";  
+             mail bcc: '', body: "<b>PIPELINE STATUS</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL} <br> Build Status: ${env.BUILD_STATUS}", cc: '', charset: 'UTF-8', from: '', mimeType: 'text/html', replyTo: '', subject: "PIPELINE STATUS CI: Project name -> ${env.JOB_NAME}", to: "getfitwithsagar2366@gmail.com";  
             }
         }
     }
