--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
             steps {
                 sh 'echo passed'
                 git branch: 'main', url: 'https://github.com/Sagar2366/LearnWithSagarBatch2.git'
+                mail bcc: '', body: "<b>PIPELINE STATUS</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}", cc: '', charset: 'UTF-8', from: '', mimeType: 'text/html', replyTo: '', subject: "ERROR CI: Project name -> ${env.JOB_NAME}", to: "getfitwithsagar2366@gmail.com";  
             }
         }
         stage('Build and Test') {
